# Phase-3-Project

./: .coverage  cli.py  health_simplified.db  health_simplified.db_test  pyproject.toml  requirements.txt  test_db.py
DB/: config.py  database.py
health_simplified/cli/: main.py
health_simplified/db/: config.py  database.py
health_simplified/health_simplified/: cli.py  database.py  models.py
health_simplified/health_simplified/models/: __init__.py  food_entry_model.py  goal_model.py  meal_plan_model.py  report_model.py  user_model.py
health_simplified/models/: __init__.py  food_entry_model.py  goal_model.py  meal_plan_model.py  report_model.py  user_model.py
models/: __init__.py  food_entry_model.py  goal_model.py  meal_plan_model.py  report_model.py  user_model.py
tests/: conftest.py  test_commands.py
tests/test_models/: test_food_entry.py  test_goal.py  test_meal_plan.py  test_report.py  test_user.py
